fixed readability of shape calc/eqns

--- a/DarkSearch.css
+++ b/DarkSearch.css
@@ -520,6 +520,17 @@
         border-color: #373737 !important;
     }
 
+    /* shape calculator/equations */
+    .lr-fy-eq.lr-fy-eq-elem{
+     color:#989898!important; 
+    }
+    .lr-fy-tb{
+     border-color: #333!important; 
+    }
+    .lr-fy-tb:focus{
+     border-color: #989898!important;  
+    }
+
     /* Unit converter */
     ._Ohf, .ccw_unit_selector, .ccw_selector_bg {
         background: #101010 !important;
